--- a/ESP/06_ESP8266_webserver_with HCJ/data/index.html
+++ b/ESP/06_ESP8266_webserver_with HCJ/data/index.html
@@ -11,17 +11,25 @@
     <title>Calculator using GenetatorJs</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body style="background-color:#333;">
     <div id="app" class="app">
-        <h1>Hi from HTML</h1>
+<div id="buttonControl">
+    <h1>Led toggle dashboard</h1>
+    <p>
+        <h2>LED Buildin</h2>
+        <button onclick="handleButtonClick(this)" data-state="on">On</button>
+    </p>
+    <p>
+        <h2>LED Buildin</h2>
+        <button onclick="handleButtonClick(this)" data-state="off">Off</button>
+    </p>
+</div>
     </div>
 
-    <script src="generator.js">
-    </script>
-    <script src="script.js">
+    <script src="script.js" defer>
         
 
     </script>
